feat(mailing): send email to guest on reservation
